tests/check_output/snapshots/errors__check_output__main@application_component_wrapped_impl_trait.snap
---
source: tests/check_output/mod.rs
expression: pretty
---
Stdout:


Stderr:
error[E0666]: nested `impl Trait` is not allowed
  --> examples/component_wrapped_impl_trait.rs:22:46
   |
21 | / #[component(
22 | |     cookies: cloned_instance_bind(Rc<RefCell<impl Cookies>>),
   | |                                              ^^^^^^^^^^^^ nested `impl Trait` here
23 | |     user_name: cloned_instance_bind(U),
24 | |     application: static_bind(Application<C, U>) [cookies, user_name]
25 | | )]
   | |__- outer `impl Trait`

error[E0562]: `impl Trait` is not allowed in impl headers
  --> examples/component_wrapped_impl_trait.rs:22:46
   |
22 |     cookies: cloned_instance_bind(Rc<RefCell<impl Cookies>>),
   |                                              ^^^^^^^^^^^^
   |
   = note: `impl Trait` is only allowed in arguments and return types of functions and methods

error[E0562]: `impl Trait` is not allowed in field types
  --> examples/component_wrapped_impl_trait.rs:22:46
   |
22 |     cookies: cloned_instance_bind(Rc<RefCell<impl Cookies>>),
   |                                              ^^^^^^^^^^^^
   |
   = note: `impl Trait` is only allowed in arguments and return types of functions and methods

error[E0599]: no method named `build` found for struct `DirkApplicationComponentBuilder` in the current scope
  --> examples/component_wrapped_impl_trait.rs:15:10
   |
12 |       let component = DirkApplicationComponent::builder()
   |  _____________________-
13 | |         .cookies(Rc::new(RefCell::new(MandatoryCookies {})))
14 | |         .user_name(user_name.clone())
15 | |         .build();
   | |         -^^^^^ method not found in `DirkApplicationComponentBuilder<Set<Rc<RefCell<impl Cookies>>>, Set<String>>`
   | |_________|
   |
...
21 | / #[component(
22 | |     cookies: cloned_instance_bind(Rc<RefCell<impl Cookies>>),
23 | |     user_name: cloned_instance_bind(U),
24 | |     application: static_bind(Application<C, U>) [cookies, user_name]
25 | | )]
   | |__- method `build` not found for this struct
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `build`, perhaps you need to implement it:
           candidate #1: `dirk_framework::component::builder::Builder`

error[E0277]: the trait bound `StaticFactoryApplication<impl Cookies, U>: Provider<Application<C, U>>` is not satisfied
  --> examples/component_wrapped_impl_trait.rs:24:5
   |
24 |     application: static_bind(Application<C, U>) [cookies, user_name]
   |     ^^^^^^^^^^^ the trait `Provider<Application<C, U>>` is not implemented for `StaticFactoryApplication<impl Cookies, U>`
   |
   = note: required for the cast from `Rc<StaticFactoryApplication<impl Cookies, U>>` to `Rc<(dyn Provider<Application<C, U>> + 'static)>`

Some errors have detailed explanations: E0277, E0562, E0599, E0666.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `application` (example "component_wrapped_impl_trait") due to 5 previous errors
