tests/check_output/snapshots/errors__check_output__main@coffee_component_singleton_with_dependencies.snap
---
source: tests/check_output/mod.rs
expression: pretty
---
Stdout:


Stderr:
error: A singleton binding cannot depend on any other bindings
  --> examples/component_singleton_with_dependencies.rs:35:45
   |
35 |     heater: singleton_bind(ElectricHeater) [logger],
   |                                             ^^^^^^

error[E0599]: no function or associated item named `create` found for struct `DirkCoffeeShop` in the current scope
  --> examples/component_singleton_with_dependencies.rs:22:39
   |
22 |       let coffee_shop = DirkCoffeeShop::create();
   |                                         ^^^^^^ function or associated item not found in `DirkCoffeeShop`
...
33 | / #[component(
34 | |     logger: singleton_bind(CoffeeLogger),
35 | |     heater: singleton_bind(ElectricHeater) [logger],
36 | |     pump: scoped_bind(ThermoSiphon<ElectricHeater>) [logger, heater],
37 | |     maker: static_bind(CoffeeMaker<ElectricHeater, ThermoSiphon<ElectricHeater>>) [logger, heater, pump]
38 | | )]
   | |__- function or associated item `create` not found for this struct
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `create`, perhaps you need to implement it:
           candidate #1: `StaticComponent`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `coffee` (example "component_singleton_with_dependencies") due to 2 previous errors
